Creación del archivo SQLite para la base de datos

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -89,6 +89,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_folder = os.getcwd()\n",
+    "engine = create_engine('sqlite:///' + os.path.join(current_folder, 'cookies.db'))\n",
+    "metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
