Inserción a partir de la llamada de insert() sobre la tabla cookies

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "current_folder = os.getcwd()\n",
     "engine = create_engine('sqlite:///' + os.path.join(current_folder, 'cookies.db'))\n",
     "metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 2-1. Inserting data as a method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_cookie = cookies.insert().values(\n",
+    "    cookie_name=\"chocolate chip\",\n",
+    "    cookie_recipe_url=\"http://some.aweso.me/cookie/recipe.html\",\n",
+    "    cookie_sku=\"CC01\",\n",
+    "    quantity=\"12\",\n",
+    "    unit_cost=\"0.50\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INSERT INTO cookies (cookie_name, cookie_recipe_url, cookie_sku, quantity, unit_cost, created_on, updated_on) VALUES (:cookie_name, :cookie_recipe_url, :cookie_sku, :quantity, :unit_cost, :created_on, :updated_on)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(new_cookie))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cookie_name': 'chocolate chip',\n",
+       " 'cookie_recipe_url': 'http://some.aweso.me/cookie/recipe.html',\n",
+       " 'cookie_sku': 'CC01',\n",
+       " 'quantity': '12',\n",
+       " 'unit_cost': '0.50',\n",
+       " 'created_on': None,\n",
+       " 'updated_on': None}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_cookie.compile().params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with engine.begin() as connection:\n",
+    "    result = connection.execute(new_cookie)\n",
+    "    print(result.inserted_primary_key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-4. Values in execute statement**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_statement = cookies.insert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Connection.execute() got an unexpected keyword argument 'cookie_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43minsert_statement\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcookie_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdark chocolate chip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcookie_recipe_url\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttp://some.aweso.me/cookie/recipe_dark.html\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcookie_sku\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCC02\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mquantity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43munit_cost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0.75\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Connection.execute() got an unexpected keyword argument 'cookie_name'"
+     ]
+    }
+   ],
+   "source": [
+    "# result = connection.execute(\n",
+    "#     insert_statement,\n",
+    "#     cookie_name='dark chocolate chip',\n",
+    "#     cookie_recipe_url='http://some.aweso.me/cookie/recipe_dark.html',\n",
+    "#     cookie_sku='CC02',\n",
+    "#     quantity='1',\n",
+    "#     unit_cost='0.75'\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Connection.execute() got an unexpected keyword argument 'cookie_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m engine\u001b[38;5;241m.\u001b[39mbegin() \u001b[38;5;28;01mas\u001b[39;00m connection:\n\u001b[1;32m----> 2\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m        \u001b[49m\u001b[43minsert_statement\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcookie_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdark chocolate chip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcookie_recipe_url\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttp://some.aweso.me/cookie/recipe_dark.html\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcookie_sku\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCC02\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m        \u001b[49m\u001b[43mquantity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43munit_cost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0.75\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(result\u001b[38;5;241m.\u001b[39minserted_primary_key)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Connection.execute() got an unexpected keyword argument 'cookie_name'"
+     ]
+    }
+   ],
+   "source": [
+    "# with engine.begin() as connection:\n",
+    "#     result = connection.execute(\n",
+    "#         insert_statement,\n",
+    "#         cookie_name='dark chocolate chip',\n",
+    "#         cookie_recipe_url='http://some.aweso.me/cookie/recipe_dark.html',\n",
+    "#         cookie_sku='CC02',\n",
+    "#         quantity='1',\n",
+    "#         unit_cost='0.75'\n",
+    "#     )\n",
+    "    \n",
+    "#     print(result.inserted_primary_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with engine.begin() as connection:\n",
+    "    result = connection.execute(\n",
+    "        insert_statement, {\n",
+    "            'cookie_name': 'dark chocolate chip',\n",
+    "            'cookie_recipe_url': 'http://some.aweso.me/cookie/recipe_dark.html',\n",
+    "            'cookie_sku': 'CC02',\n",
+    "            'quantity': '1',\n",
+    "            'unit_cost': '0.75'\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    print(result.inserted_primary_key)"
    ]
   },
   {
