Inserción de múltiples registros localizados en una lista Python. Cada elemento es un diccionario con los atributos de las tablas

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -286,6 +286,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 2-5. Multiple inserts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory_list = [\n",
+    "    {\n",
+    "    'cookie_name': 'peanut butter',\n",
+    "    'cookie_recipe_url': 'http://some.aweso.me/cookie/peanut.html',\n",
+    "    'cookie_sku': 'PB01',\n",
+    "    'quantity': '24',\n",
+    "    'unit_cost': '0.25'\n",
+    "    },\n",
+    "    {\n",
+    "    'cookie_name': 'oatmeal raisin',\n",
+    "    'cookie_recipe_url': 'http://some.okay.me/cookie/raisin.html',\n",
+    "    'cookie_sku': 'EWW01',\n",
+    "    'quantity': '100',\n",
+    "    'unit_cost': '1.00'\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "with engine.begin() as connection:\n",
+    "    result = connection.execute(insert_statement, inventory_list)\n",
+    "    print(result.rowcount)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
