Leer todos los registros de una tabla con SQLAlchemy

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -336,6 +336,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 2. Querying Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.sql import select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'chocolate chip', 'http://some.aweso.me/cookie/recipe.html', 'CC01', 12, Decimal('0.50'), datetime.datetime(2024, 9, 13, 11, 42, 17, 395354), datetime.datetime(2024, 9, 13, 11, 42, 17, 395354))\n",
+      "(2, 'dark chocolate chip', 'http://some.aweso.me/cookie/recipe_dark.html', 'CC02', 1, Decimal('0.75'), datetime.datetime(2024, 9, 13, 11, 55, 2, 636436), datetime.datetime(2024, 9, 13, 11, 55, 2, 636436))\n",
+      "(3, 'peanut butter', 'http://some.aweso.me/cookie/peanut.html', 'PB01', 24, Decimal('0.25'), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962))\n",
+      "(4, 'oatmeal raisin', 'http://some.okay.me/cookie/raisin.html', 'EWW01', 100, Decimal('1.00'), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962))\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(cookies)\n",
+    "\n",
+    "with engine.begin() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    for result in results:\n",
+    "        print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
