Selección de columnas específicas de una consulta

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -377,10 +377,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**Example 2-7. Simple select method**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'chocolate chip', 'http://some.aweso.me/cookie/recipe.html', 'CC01', 12, Decimal('0.50'), datetime.datetime(2024, 9, 13, 11, 42, 17, 395354), datetime.datetime(2024, 9, 13, 11, 42, 17, 395354))\n",
+      "(2, 'dark chocolate chip', 'http://some.aweso.me/cookie/recipe_dark.html', 'CC02', 1, Decimal('0.75'), datetime.datetime(2024, 9, 13, 11, 55, 2, 636436), datetime.datetime(2024, 9, 13, 11, 55, 2, 636436))\n",
+      "(3, 'peanut butter', 'http://some.aweso.me/cookie/peanut.html', 'PB01', 24, Decimal('0.25'), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962))\n",
+      "(4, 'oatmeal raisin', 'http://some.okay.me/cookie/raisin.html', 'EWW01', 100, Decimal('1.00'), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962), datetime.datetime(2024, 9, 13, 11, 58, 14, 394962))\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = cookies.select()\n",
+    "\n",
+    "with engine.begin() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    for result in results:\n",
+    "        print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-10. Select only cookie_name and quantity**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMKeyView(['cookie_name', 'quantity'])\n",
+      "('chocolate chip', 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(cookies.c.cookie_name, cookies.c.quantity)\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    \n",
+    "    print(results.keys())\n",
+    "\n",
+    "    result = results.first()\n",
+    "    \n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
