Ordenamiento de ascendente para la columna cantidad (quantity)

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -445,6 +445,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 2.2.3 Ordering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-11. Ordering by quantity ascending**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - dark chocolate chip\n",
+      "12 - chocolate chip\n",
+      "24 - peanut butter\n",
+      "100 - oatmeal raisin\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(cookies.c.cookie_name, cookies.c.quantity)\n",
+    "selection = selection.order_by(cookies.c.quantity)\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    \n",
+    "    for result in results:\n",
+    "        print('{} - {}'.format(result.quantity, result.cookie_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
