Uso de la función des() para order descendentemente varias filas de datos

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -484,6 +484,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-12. Order by quantity descending**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 - oatmeal raisin\n",
+      "24 - peanut butter\n",
+      "12 - chocolate chip\n",
+      "1 - dark chocolate chip\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import desc\n",
+    "\n",
+    "selection = select(cookies.c.cookie_name, cookies.c.quantity)\n",
+    "selection = selection.order_by(desc(cookies.c.quantity))\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    \n",
+    "    for result in results:\n",
+    "        print('{} - {}'.format(result.quantity, result.cookie_name))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
