Obtiene los dos más pequeños productos del inventario

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -520,6 +520,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.4 Limiting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-13. Two smallest cookie inventories**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - dark chocolate chip\n",
+      "12 - chocolate chip\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(cookies.c.cookie_name, cookies.c.quantity)\n",
+    "selection = selection.order_by(cookies.c.quantity)\n",
+    "selection = selection.limit(2)\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results = connection.execute(selection)\n",
+    "    \n",
+    "    for result in results:\n",
+    "        print('{} - {}'.format(result.quantity, result.cookie_name))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
