Conteo de registros en una tabla

--- a/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
+++ b/Ch02_Working_Data_SA_Core/ch02_working_data_sa_core.ipynb
@@ -560,6 +560,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.5 Built-In SQL Functions and Labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-14. Two largest cookie inventories**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.sql import func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(func.sum(cookies.c.quantity))\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    result = connection.execute(selection).scalar()\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example 2-15. Counting our inventory records**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "Could not locate column in row for column 'keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchColumnError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Dropbox\\Education\\Books\\Dev\\Python\\Essential_SQLAlchemy\\venv\\Lib\\site-packages\\sqlalchemy\\engine\\result.py:199\u001b[0m, in \u001b[0;36mResultMetaData._key_not_found\u001b[1;34m(self, key, attr_error)\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 199\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_key_fallback\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    200\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m ke:\n",
+      "File \u001b[1;32mc:\\Dropbox\\Education\\Books\\Dev\\Python\\Essential_SQLAlchemy\\venv\\Lib\\site-packages\\sqlalchemy\\engine\\cursor.py:823\u001b[0m, in \u001b[0;36mCursorResultMetaData._key_fallback\u001b[1;34m(self, key, err, raiseerr)\u001b[0m\n\u001b[0;32m    822\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 823\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m exc\u001b[38;5;241m.\u001b[39mNoSuchColumnError(\n\u001b[0;32m    824\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not locate column in row for column \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    825\u001b[0m             \u001b[38;5;241m%\u001b[39m util\u001b[38;5;241m.\u001b[39mstring_or_unprintable(key)\n\u001b[0;32m    826\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m    827\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mNoSuchColumnError\u001b[0m: Could not locate column in row for column 'keys'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m rp \u001b[38;5;241m=\u001b[39m connection\u001b[38;5;241m.\u001b[39mexecute(selection)\n\u001b[0;32m      5\u001b[0m record \u001b[38;5;241m=\u001b[39m rp\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mrecord\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeys\u001b[49m())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(record\u001b[38;5;241m.\u001b[39mcount_1)\n",
+      "File \u001b[1;32mlib\\\\sqlalchemy\\\\cyextension\\\\resultproxy.pyx:66\u001b[0m, in \u001b[0;36msqlalchemy.cyextension.resultproxy.BaseRow.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mlib\\\\sqlalchemy\\\\cyextension\\\\resultproxy.pyx:63\u001b[0m, in \u001b[0;36msqlalchemy.cyextension.resultproxy.BaseRow._get_by_key_impl\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Dropbox\\Education\\Books\\Dev\\Python\\Essential_SQLAlchemy\\venv\\Lib\\site-packages\\sqlalchemy\\engine\\result.py:201\u001b[0m, in \u001b[0;36mResultMetaData._key_not_found\u001b[1;34m(self, key, attr_error)\u001b[0m\n\u001b[0;32m    199\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_key_fallback(key, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m    200\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m ke:\n\u001b[1;32m--> 201\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(ke\u001b[38;5;241m.\u001b[39margs[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mke\u001b[39;00m\n\u001b[0;32m    202\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    203\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_key_fallback(key, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Could not locate column in row for column 'keys'"
+     ]
+    }
+   ],
+   "source": [
+    "selection = select(func.count(cookies.c.cookie_name))\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    rp = connection.execute(selection)\n",
+    "    record = rp.first()\n",
+    "    \n",
+    "    # print(record.keys())\n",
+    "    print(record.count_1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
